# greendog

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
greendog/: __main__.py  auth.py  benchmark.py  client.py  diff.py  fetch.py  report.py  triage.py
tests/: test_fetch.py
